updated height for bug on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,3 +64,7 @@
   top: 15%;
   transform: translate(-50%, 0%);
 }
+
+.mobile-navbar-height {
+  height: 100dvh;
+}
